[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/MainHeaderTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/MainButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/Main.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 65.0
theme = ExtResource( 1 )
text = "Advent Of Godot"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 531.0
size_flags_horizontal = 3
alignment = 1

[node name="DaySelector" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 510.0
margin_bottom = 234.0
theme = ExtResource( 2 )
text = "Load Day"

[node name="PartOne" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 510.0
margin_bottom = 293.0
theme = ExtResource( 2 )
text = "Run Part One"

[node name="PartTwo" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 510.0
margin_bottom = 352.0
theme = ExtResource( 2 )
text = "Run Part Two"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 531.0
size_flags_horizontal = 3

[node name="DayLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 510.0
margin_bottom = 119.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "No Day Selected"
align = 1
valign = 1

[node name="PartOneResult" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 231.0
margin_right = 510.0
margin_bottom = 296.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Part One Result"
align = 1
valign = 1

[node name="PartTwoResult" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 408.0
margin_right = 510.0
margin_bottom = 473.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Part Two Result"
align = 1
valign = 1

[node name="DayContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 531.0
margin_right = 510.0
margin_bottom = 531.0

[node name="DayLoader" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/DaySelector" to="." method="_on_DaySelector_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PartOne" to="." method="_on_PartOne_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PartTwo" to="." method="_on_PartTwo_pressed"]
[connection signal="id_pressed" from="DayLoader" to="." method="_on_DayLoader_id_pressed"]
